<resources>
    <!-- RegisterActivity 畫面上的 UI 元件文字 -->
    <string name="app_name">GoBuy UI Demo</string>
    <string name="countryTextView">國籍別</string>
    <string name="countrySpinnerHint">下拉式選單</string>
    <string name="memberAccountTextView">會員帳號</string>
    <string name="phoneTextFieldHint">請輸入手機號碼</string>
    <string name="emailTextFieldHint">請輸入電子信箱</string>
    <string name="passwordTextView">會員密碼</string>
    <string name="passwordTextFieldHint">密碼長度至少 6 個字元</string>
    <string name="birthdayTextView">出生日期</string>
    <string name="birthdayTextFieldHint">YYYY/MM/DD</string>
    <string name="verifyTextView">驗證碼</string>
    <string name="clearButton">清除重填</string>
    <string name="submitButton">確認送出</string>
    <!-- LoginActivity 畫面上的 UI 元件文字 -->
    <string name="Login_AccountTextView">會員帳號</string>
    <string name="Login_AccountEditTextHint">請輸入手機號碼或電子信箱</string>
    <string name="Login_PasswordTextView">會員密碼</string>
    <string name="Login_PasswordEditTextHint">密碼長度至少 6 個字元</string>
    <string name="HTTPS">HTTPS</string>
    <string name="LongStay">常駐</string>
    <string name="Login_ClearButton">清除重填</string>
    <string name="Login_SubmitButton">確認送出</string>
    <string name="Login_VerifyTextView">驗證碼</string>
    <!-- MainActivity 畫面上的 UI 元件文字 -->
    <string name="Main_SloganTextView">移動消費 致富商機</string>
    <string name="Main_LatestNewsImageButton">最新消息</string>
    <string name="Main_ScanImageButton">掃一掃</string>
    <string name="Main_ActivitySearchImageButton">活動查詢</string>
    <string name="Main_BonusPointsSearchImageButton">紅利點數查詢</string>
    <string name="Main_SearchStoreImageButton">搜尋店家</string>
    <string name="Main_FunctionSettingsImageButton">功能設置</string>
    <string name="Main_JoinSpecialStoreImageButton">申請加入特約店</string>
    <string name="Main_JoinDiscountStoreImageButton">申請加入優惠店</string>
</resources>