<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_9193"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/AccountTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="#8C9196"
        android:gravity="center_vertical"
        android:text="@string/Login_AccountTextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/AccountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlCompat,TextContrastCheck" />

    <EditText
        android:id="@+id/AccountEditText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/Login_AccountEditTextHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/Login_PasswordEditTextHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/PasswordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/AccountEditText"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/PasswordTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="#8C9196"
        android:gravity="center_vertical"
        android:text="@string/Login_PasswordTextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/PasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AccountTextView"
        tools:ignore="RtlCompat,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/HTTPSTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="202dp"
        android:gravity="center_vertical"
        android:text="@string/HTTPS"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/HTTPSCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextView"
        tools:ignore="RtlCompat" />

    <CheckBox
        android:id="@+id/HTTPSCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/LongStayTextView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="202dp"
        android:gravity="center_vertical"
        android:text="@string/LongStay"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/LongStayCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HTTPSTextView"
        tools:ignore="RtlCompat" />

    <CheckBox
        android:id="@+id/LongStayCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HTTPSCheckBox"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Login_ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="70dp"
        android:text="@string/Login_ClearButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Login_SubmitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LongStayTextView" />

    <Button
        android:id="@+id/Login_SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="70dp"
        android:text="@string/Login_SubmitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LongStayCheckBox" />
</androidx.constraintlayout.widget.ConstraintLayout>